# ranvier-core

./: .claudeignore  .dockerignore  .gitignore  BACKLOG-ARCHIVE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.base  Dockerfile.base.default-alloc  Dockerfile.fuzz  Dockerfile.fuzz-seastar  Dockerfile.production  Dockerfile.production.fast  Dockerfile.sanitize  MEMORY.md  Makefile  README.md  TEST_COVERAGE_ANALYSIS.md  docker-compose.benchmark-real.yml  docker-compose.test.yml  notes.txt  ranvier-local.yaml.example  ranvier.yaml.example
.dev-context/: adversarial-audit-2026-01-14.md  adversarial-audit-2026-02-12.md  audit-fix-prompts.md  chassis-extraction-sketch.md  cheatsheet.md  claude-adversarial-audit-prompt.md  claude-audit-prompt.md  claude-context.md  claude-debug-prompt.md  claude-doc-prompt.md  claude-impl-prompt.md  claude-incident-prompt.md  claude-locust-sync-map.md  claude-pattern-extractor-prompt.md  claude-perf-prompt.md  claude-planning-prompt.md  claude-prompt.md  claude-refactor-prompt.md  claude-review-prompt.md  claude-strategic-alignment-prompt.md  http-controller-review.md  investigation-289-routing-regression.md  project-direction-assessment-2026-02.md  router-service-review.md  seastar-pitfalls-reference.md
.dev-context/investigations/: benchmark-timeout-investigation.md
.devcontainer/: .devcontainer.json.swp  Dockerfile  devcontainer.json
.github/workflows/: benchmark.yml  claude-code-review.yml  docker-base-optimized.yml  docker-base.yml  docker-publish-optimized.yml  docker-publish.yml  fuzz-tests.yml  integration-tests.yml  release.yml  sanitizer-tests.yml  unit-tests.yml
benchmarks/cache_event_generator/: generator.py  harness.py  run-ab.sh  run.sh
blog-drafts/: 24-hard-rules-for-async-cpp.md  content-strategy.md
cmake/: embed_dashboard.cmake
deploy/homebrew/: ranvier.rb
doc/: .notes.md.swp  api-reference.md  architecture.md  claude-context.md  claude-prompt.md  notes.md  request-flow.md
docs/: ARCHITECTURE_AND_VISION.md  INTELLIGENCE_LAYER_ROADMAP.md  TODO.md  adversarial-audit-2026-01-14.md  api-reference.md  architecture.md  audit-fix-01-async-io.md  audit-fix-02-bounded-containers.md  audit-fix-03-lifecycle.md  audit-fix-04-cleanup.md  audit-fix-prompts.md  benchmark-guide-8xA100.md  claude-adversarial-audit-prompt.md  claude-audit-prompt.md  claude-context.md  claude-debug-prompt.md  claude-doc-prompt.md  claude-impl-prompt.md  claude-incident-prompt.md  claude-pattern-extractor-prompt.md  claude-perf-prompt.md  claude-planning-prompt.md  claude-prompt.md  claude-refactor-prompt.md  claude-review-prompt.md  claude-strategic-alignment-prompt.md  kubernetes.md  notes.md  openapi.yaml  performance.md  request-flow.md  validation.md
docs/api/: reference.md
docs/architecture/: VISION.md  kv-cache-compression-integration.md  per-api-key-attribution.md  push-cache-eviction-notifications.md  system-design.md
docs/audits/: request-lifecycle-crash-audit.md  request-lifecycle-empirical-followups-2026-05-08.md  v2.0.0-hard-rules-audit.md
docs/benchmarks/: benchmark-guide-8xA100.md  kv-cache-prefix-routing-benchmark.md  push-cache-eviction.md
docs/bugs/: persistence-corruption-after-crash.md  stream-close-assertion-failure.md
docs/deployment/: kubernetes.md  performance.md
docs/design/: prefix-affinity-routing.md
docs/guides/: benchmark-reproduction.md  cloud-deployment.md  getting-started-local.md  ide-integration.md
docs/internals/: async-persistence.md  gossip-protocol.md  prefix-affinity-routing.md  radix-tree.md  request-lifecycle-crash-audit.md  request-lifecycle-perf-analysis.md  request-lifecycle-perf-fixes.md  request-lifecycle.md  shard-load-balancing.md  tokenization.md
scripts/: README.md  bench-runner.sh  bench.sh  docker-cleanup.sh  ranvier-wrapper.sh  run-multi-gpu-benchmark.sh  setup-lambda-benchmark.sh
src/: README.md  agent_registry.cpp  agent_registry.hpp  application.cpp  application.hpp  art.hpp  async_persistence.cpp  async_persistence.hpp  backend_registry.hpp  boundary_detector.hpp  byte_order.hpp  cache_event_parser.hpp  chassis_config_schema.hpp  chat_template.hpp  circuit_breaker.hpp  config.hpp  config_infra.hpp  config_loader.cpp  config_loader.hpp  config_loader_async.cpp  config_loader_async.hpp  config_schema.hpp  connection_pool.hpp  cross_shard_request.hpp  crypto_offloader.cpp  crypto_offloader.hpp  dtls_context.cpp  dtls_context.hpp  gossip_consensus.cpp  gossip_consensus.hpp  gossip_protocol.cpp  gossip_protocol.hpp  gossip_service.cpp  gossip_service.hpp  gossip_transport.cpp  gossip_transport.hpp  health_service.cpp  health_service.hpp  http_controller.cpp  http_controller.hpp  (+44 more)
src/dashboard/: dashboard_resource.hpp.in  index.html
tests/: benchmark.py
tests/fuzz/: README.md  radix_tree_fuzz.cpp  request_rewriter_fuzz.cpp  stream_parser_fuzz.cpp  ubsan-suppressions.txt
tests/integration/: Dockerfile.locust  Dockerfile.mock-backend  README.md  benchmark-baseline.json  bisect-benchmark.sh  compare_results.py  conftest.py  locustfile.py  locustfile_real.py  mock_backend.py  parse_locust_output.py  parse_real_benchmark.py  prometheus-benchmark.yml  prompt_loader.py  results_parser.py  run-benchmark.sh  run_benchmark_comparison.py  test_attribution_cardinality.py  test_cluster.py  test_config_loading.py  test_graceful_shutdown.py  test_health_circuit_breaker.py  test_http_pipeline.py  test_intelligence_layer.py  test_load_aware_routing.py  test_metrics.py  test_negative_paths.py  test_persistence_recovery.py  test_prefix_routing.py  test_streaming.py
tests/unit/: agent_registry_test.cpp  application_test.cpp  async_persistence_concurrency_test.cpp  async_persistence_test.cpp  boundary_detector_test.cpp  (+55 more)
tools/: .register-backends.sh.swp  README.md  delete-backends.sh  get-metrics.sh  mock_gpu.py  register-backends.sh  run-mock-cpu.sh  rvctl  send-request.sh  set-backend-weights.sh  sidecar.py  verify_draining_and_reload.py
validation/: README.md  atomic_audit.sh  disk_stress.sh  gossip_storm.py  stall_watchdog.sh  validate_v1.sh
(+39 files in other folders)
